--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -10,7 +10,7 @@
   <div *ngIf="loadingData">
     <ion-grid>
       <ion-row>
-        <ion-col width="100">
+        <ion-col >
           <ion-list>
             <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
               {{ message }}
@@ -25,68 +25,75 @@
     </ion-grid>
   </div>
 
-  <div *ngIf="!loadingData" padding>
-    <ion-item-group>
-      <ion-item-divider color="primary">
-        <b>App Information</b>
-      </ion-item-divider>
-      <ion-item *ngFor="let entry of appInformation;let currentAppInfoIndex = index ">
-        <h2>{{ entry.key }}</h2>
-        <p>{{ entry.value }}</p>
-      </ion-item>
-    </ion-item-group>
-    <ion-list></ion-list>
-    <ion-item-group>
-      <ion-item-divider color="primary">
-        <b>Data Values Status</b>
-      </ion-item-divider>
-      <ion-item >
-        <h2>Synced</h2>
-        <p>{{ dataValuesStorage.online }}</p>
-      </ion-item>
-      <ion-item >
-        <h2>Not Synced</h2>
-        <p>{{ dataValuesStorage.offline }}</p>
-      </ion-item>
-    </ion-item-group>
-    <ion-list></ion-list>
-    <ion-item-group>
-      <ion-item-divider color="primary">
-        <b>Event Storage Status</b>
-      </ion-item-divider>
-      <ion-item >
-        <h2>Synced</h2>
-        <p>{{ eventsStorage.online }}</p>
-      </ion-item>
-      <ion-item >
-        <h2>Not Synced</h2>
-        <p>{{ eventsStorage.offline }}</p>
-      </ion-item>
-    </ion-item-group>
-    <ion-list></ion-list>
-    <ion-item-group>
-      <ion-item-divider color="primary">
-        <b>System Information</b>
-      </ion-item-divider>
-      <div *ngFor="let entry of systemInformation;let currentSystemInfoIndex = index">
-        <ion-item  *ngIf="currentSystemInfoIndex < hideAndShowObject.systemInformation.count">
-          <h2>{{ entry.key }}</h2>
-          <p>{{ entry.value }}</p>
-        </ion-item>
-      </div>
-      <ion-item *ngIf="hideAndShowObject.systemInformation.count <= systemInformation.length " >
-        <div item-right>
-          <button class="normalButton" ion-button clear  text-capitalize (tap)="hideAndShowDetails('systemInformation',systemInformation.length)">
-            <div *ngIf="hideAndShowObject.systemInformation.status">
-              Show less
+  <div *ngIf="!loadingData" >
+    <ion-grid>
+      <ion-row>
+        <ion-col >
+          <ion-item-group>
+            <ion-item-divider color="whitecolor">
+              <b>App Information</b>
+            </ion-item-divider>
+            <ion-item *ngFor="let entry of appInformation;let currentAppInfoIndex = index ">
+              <h2>{{ entry.key }}</h2>
+              <p>{{ entry.value }}</p>
+            </ion-item>
+          </ion-item-group>
+          <ion-list></ion-list>
+          <ion-item-group>
+            <ion-item-divider color="whitecolor">
+              <b>Data Values Status</b>
+            </ion-item-divider>
+            <ion-item >
+              <h2>Synced</h2>
+              <p>{{ dataValuesStorage.online }}</p>
+            </ion-item>
+            <ion-item >
+              <h2>Not Synced</h2>
+              <p>{{ dataValuesStorage.offline }}</p>
+            </ion-item>
+          </ion-item-group>
+          <ion-list></ion-list>
+          <ion-item-group>
+            <ion-item-divider color="whitecolor">
+              <b>Event Storage Status</b>
+            </ion-item-divider>
+            <ion-item >
+              <h2>Synced</h2>
+              <p>{{ eventsStorage.online }}</p>
+            </ion-item>
+            <ion-item >
+              <h2>Not Synced</h2>
+              <p>{{ eventsStorage.offline }}</p>
+            </ion-item>
+          </ion-item-group>
+          <ion-list></ion-list>
+          <ion-item-group>
+            <ion-item-divider color="whitecolor">
+              <b>System Information</b>
+            </ion-item-divider>
+            <div *ngFor="let entry of systemInformation;let currentSystemInfoIndex = index">
+              <ion-item  *ngIf="currentSystemInfoIndex < hideAndShowObject.systemInformation.count">
+                <h2>{{ entry.key }}</h2>
+                <p>{{ entry.value }}</p>
+              </ion-item>
             </div>
-            <div *ngIf="!hideAndShowObject.systemInformation.status">
-              Show more
-            </div>
-          </button>
-        </div>
-      </ion-item>
+            <ion-item *ngIf="hideAndShowObject.systemInformation.count <= systemInformation.length " >
+              <div item-right>
+                <button class="normalButton" ion-button clear  text-capitalize (tap)="hideAndShowDetails('systemInformation',systemInformation.length)">
+                  <div *ngIf="hideAndShowObject.systemInformation.status">
+                    Show less
+                  </div>
+                  <div *ngIf="!hideAndShowObject.systemInformation.status">
+                    Show more
+                  </div>
+                </button>
+              </div>
+            </ion-item>
 
-    </ion-item-group>
+          </ion-item-group>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
   </div>
 </ion-content>
