--- a/src/pages/dash-board-home/dash-board-home.html
+++ b/src/pages/dash-board-home/dash-board-home.html
@@ -4,10 +4,11 @@
   See http://ionicframework.com/docs/v2/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+
 <ion-header>
 
   <ion-navbar color="primary" mode="md">
-    <ion-title>DashBoard Home</ion-title>
+    <ion-title>Dashboard Home</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -23,7 +24,7 @@
             <div style="text-align: center" item-left >
               <page-loading loadingSize="small"></page-loading>
             </div>
-            Loading DashBoards
+            Loading Dashboards
           </ion-item>
         </div>
         <div *ngIf="dashBoardProgressTracker.isDashBoardsLoaded">
@@ -58,7 +59,7 @@
     <div *ngIf="!isDashboardListMenuOpen" >
       <ion-row *ngIf="!dashBoardProgressTracker.isDashBoardItemObjectsAndDataLoaded && dashBoardProgressTracker.isDashBoardsLoaded">
         <ion-col width="100">
-          <page-loading loadingSize="large" loadingMessage="Loading visualization metadata"></page-loading>
+          <page-loading loadingSize="large" loadingMessage="Loading dashboard items"></page-loading>
         </ion-col>
       </ion-row>
 
