fixing editing event on event viewa

--- a/src/pages/event-view/event-view.html
+++ b/src/pages/event-view/event-view.html
@@ -67,7 +67,7 @@
 <!--- menu as well as add new event as fab icon-->
 <div *ngIf="!loadingData && event" >
   <ion-fab bottom right >
-    <button ion-fab (tap)="gotToEditEvent()" color="favorite">
+    <button ion-fab (tap)="gotToEditEvent(event)" color="favorite">
       <ion-icon name="md-create"></ion-icon>
     </button>
   </ion-fab>
