--- a/src/pages/data-entry-home/data-entry-home.html
+++ b/src/pages/data-entry-home/data-entry-home.html
@@ -20,8 +20,7 @@
       <ion-col>
         <button [disabled]="!currentSelectionStatus.orgUnit" class="dataEntryButton" text-capitalize ion-button full large (tap)="openOrganisationUnitModal()" color="whitecolor">
            <span *ngIf="!currentSelectionStatus.isOrgUnitLoaded" >
-              <page-loading loadingSize="small"></page-loading>
-              Loading organisation units
+              <page-loading loadingSize="small"></page-loading>Loading organisation units
             </span>
             <span *ngIf="currentSelectionStatus.isOrgUnitLoaded" >
               {{ selectedOrganisationUnitLabel }}
@@ -33,8 +32,7 @@
       <ion-col>
         <button [disabled]="!currentSelectionStatus.dataSet" class="dataEntryButton" text-capitalize ion-button full large (tap)="openDataSetsModal()" color="whitecolor">
             <span *ngIf="!currentSelectionStatus.isDataSetLoaded" >
-              <page-loading loadingSize="small"></page-loading>
-              Loading entry forms
+              <page-loading loadingSize="small"></page-loading>Loading entry forms
             </span>
             <span *ngIf="currentSelectionStatus.isDataSetLoaded" >
               {{ selectedDataSetLabel }}
