--- a/src/pages/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry-form/data-entry-form.html
@@ -50,7 +50,7 @@
         <div *ngIf="section.id == currentPage">
           <div *ngIf=" section.name != 'defaultSection'">
             <ion-item-divider >
-              <p color="font-color" align="center">
+              <p color="primary" align="center">
                 <b>{{ section.name }}</b>
               </p>
             </ion-item-divider>
