--- a/src/pages/data-entry-form/data-entry-form.html
+++ b/src/pages/data-entry-form/data-entry-form.html
@@ -49,11 +49,16 @@
       <div *ngFor="let section of entryFormSections">
         <div *ngIf="section.id == currentPage">
           <div *ngIf=" section.name != 'defaultSection'">
-            <ion-item-divider >
+            <ion-item >
               <p color="font-color" align="center">
                 <b>{{ section.name }}</b>
               </p>
-            </ion-item-divider>
+              <div style="text-align: center"item-right (tap)="openEntryFormSectionList()">
+                <button ion-button color="dark" clear>
+                  <img src="assets/dashboard/menu.png" width="20" height="20">
+                </button>
+              </div>
+            </ion-item>
           </div>
         </div>
       </div>
@@ -161,7 +166,7 @@
     <!-- pagination -->
     <ion-item-group>
       <ion-item-divider>
-        <ion-row>
+        <ion-row *ngIf="entryFormSections.length > 0">
           <ion-col>
             <button color="font-color" ion-button full clear small (tap)="changePagination(0)">
               <ion-icon name="ios-arrow-back-outline"></ion-icon>
