--- a/src/pages/send-data-via-sms/send-data-via-sms.html
+++ b/src/pages/send-data-via-sms/send-data-via-sms.html
@@ -2,40 +2,48 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <button [disabled]="!currentSelectionStatus.orgUnit" class="dataEntryButton" text-capitalize ion-button full large (tap)="openOrganisationUnitModal()" color="whitecolor">
-           <span *ngIf="!currentSelectionStatus.isOrgUnitLoaded" >
-              <ion-spinner  name="crescent" color="secondary"></ion-spinner>&nbsp;&nbsp;
+        <ion-item text-capitalize (tap)="openOrganisationUnitModal()">
+          <div style="text-align: center" item-left>
+            <div *ngIf="!currentSelectionStatus.isOrgUnitLoaded">
+              <page-loading loadingSize="small"></page-loading>
+            </div>
+          </div>
+          <div *ngIf="currentSelectionStatus.isOrgUnitLoaded" style="text-align: center">
+            {{ selectedOrganisationUnitLabel }}
+          </div>
+            <span *ngIf="!currentSelectionStatus.isOrgUnitLoaded" >
               Loading organisation units
             </span>
-            <span *ngIf="currentSelectionStatus.isOrgUnitLoaded" >
-              {{ selectedOrganisationUnitLabel }}
-            </span>
-        </button>
+        </ion-item>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
-        <button [disabled]="!currentSelectionStatus.dataSet" class="dataEntryButton" text-capitalize ion-button full large (tap)="openDataSetsModal()" color="whitecolor">
+        <ion-item text-capitalize (tap)="openDataSetsModal()" >
+          <div style="text-align: center" item-left>
+            <div *ngIf="!currentSelectionStatus.isDataSetLoaded">
+              <page-loading loadingSize="small"></page-loading>
+            </div>
+          </div>
+          <div *ngIf="currentSelectionStatus.isDataSetLoaded" style="text-align: center" >
+            {{ selectedDataSetLabel }}
+          </div>
             <span *ngIf="!currentSelectionStatus.isDataSetLoaded" >
-              <ion-spinner  name="crescent" color="secondary"></ion-spinner>&nbsp;&nbsp;
               Loading entry forms
             </span>
-            <span *ngIf="currentSelectionStatus.isDataSetLoaded" >
-              {{ selectedDataSetLabel }}
-            </span>
-        </button>
+        </ion-item>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
-        <button [disabled]="!currentSelectionStatus.period" class="dataEntryButton" text-capitalize ion-button full large (tap)="openPeriodModal()" color="whitecolor">
-          {{ selectedPeriodLabel }}
-        </button>
+        <ion-item text-capitalize (tap)="openPeriodModal()" >
+          <div style="text-align: center">
+            {{ selectedPeriodLabel }}
+          </div>
+        </ion-item>
       </ion-col>
     </ion-row>
-  </ion-grid>
 
-  <ion-grid>
     <div *ngIf="selectedPeriod">
       <div *ngIf="selectedPeriod.name">
         <div *ngIf="selectedDataSet.categoryCombo">
@@ -76,7 +84,7 @@
                 <span margin-top="0px">&nbsp;&nbsp;{{ sendDataViaSmsObject.loadingMessage }}</span>
               </span>
               <span *ngIf="!sendDataViaSmsObject.isLoading" >
-                Send Data &nbsp;&nbsp;&nbsp;<ion-icon name="ios-arrow-forward-outline"></ion-icon>
+                Upload Data &nbsp;&nbsp;&nbsp;<ion-icon name="ios-arrow-forward-outline"></ion-icon>
               </span>
             </button>
           </ion-col>
