--- a/src/pages/data-entry-home/data-entry-home.html
+++ b/src/pages/data-entry-home/data-entry-home.html
@@ -18,33 +18,45 @@
   <ion-grid>
     <ion-row>
       <ion-col>
-        <button [disabled]="!currentSelectionStatus.orgUnit" class="dataEntryButton" text-capitalize ion-button full large (tap)="openOrganisationUnitModal()" color="whitecolor">
-           <span *ngIf="!currentSelectionStatus.isOrgUnitLoaded" >
-              <page-loading loadingSize="small"></page-loading>Loading organisation units
+        <ion-item text-capitalize (tap)="openOrganisationUnitModal()">
+          <div style="text-align: center" item-left>
+            <div *ngIf="!currentSelectionStatus.isOrgUnitLoaded">
+              <page-loading loadingSize="small"></page-loading>
+            </div>
+          </div>
+          <div *ngIf="currentSelectionStatus.isOrgUnitLoaded" style="text-align: center">
+            {{ selectedOrganisationUnitLabel }}
+          </div>
+            <span *ngIf="!currentSelectionStatus.isOrgUnitLoaded" >
+              Loading organisation units
             </span>
-            <span *ngIf="currentSelectionStatus.isOrgUnitLoaded" >
-              {{ selectedOrganisationUnitLabel }}
-            </span>
-        </button>
+        </ion-item>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
-        <button [disabled]="!currentSelectionStatus.dataSet" class="dataEntryButton" text-capitalize ion-button full large (tap)="openDataSetsModal()" color="whitecolor">
+        <ion-item text-capitalize (tap)="openDataSetsModal()" >
+          <div style="text-align: center" item-left>
+            <div *ngIf="!currentSelectionStatus.isDataSetLoaded">
+              <page-loading loadingSize="small"></page-loading>
+            </div>
+          </div>
+          <div *ngIf="currentSelectionStatus.isDataSetLoaded" style="text-align: center" >
+            {{ selectedDataSetLabel }}
+          </div>
             <span *ngIf="!currentSelectionStatus.isDataSetLoaded" >
-              <page-loading loadingSize="small"></page-loading>Loading entry forms
+              Loading entry forms
             </span>
-            <span *ngIf="currentSelectionStatus.isDataSetLoaded" >
-              {{ selectedDataSetLabel }}
-            </span>
-        </button>
+        </ion-item>
       </ion-col>
     </ion-row>
     <ion-row>
       <ion-col>
-        <button [disabled]="!currentSelectionStatus.period" class="dataEntryButton" text-capitalize ion-button full large (tap)="openPeriodModal()" color="whitecolor">
-          {{ selectedPeriodLabel }}
-        </button>
+        <ion-item text-capitalize (tap)="openPeriodModal()" >
+          <div style="text-align: center">
+            {{ selectedPeriodLabel }}
+          </div>
+        </ion-item>
       </ion-col>
     </ion-row>
 
@@ -54,16 +66,16 @@
           <div *ngIf="selectedDataSet.categoryCombo.name != 'default'">
             <ion-row >
               <ion-col >
-                <ion-list>
-                  <ion-item *ngFor="let category of selectedDataSet.categoryCombo.categories;let categoryIndex = index ">
-                    <ion-label>{{ category.name }}</ion-label>
-                    <ion-select [(ngModel)]="selectedDataDimension[categoryIndex]">
-                      <ion-option *ngFor="let option of category.categoryOptions" value="{{option.id}}" >
-                        {{ option.name }}
-                      </ion-option>
-                    </ion-select>
-                  </ion-item>
-                </ion-list>
+                <div *ngFor="let category of selectedDataSet.categoryCombo.categories;let categoryIndex = index ">
+                  <ion-item >
+                  <ion-label>{{ category.name }}</ion-label>
+                  <ion-select [(ngModel)]="selectedDataDimension[categoryIndex]">
+                    <ion-option *ngFor="let option of category.categoryOptions" value="{{option.id}}" >
+                      {{ option.name }}
+                    </ion-option>
+                  </ion-select>
+                </ion-item><br>
+                </div>
               </ion-col>
             </ion-row>
           </div>
@@ -83,7 +95,7 @@
                 <p ><b>Period</b> : {{ selectedPeriodLabel }}</p>
               </ion-item-divider>
               <button class="dataEntryButton" ion-button full large color="whitecolor">
-                ENTER DATA &nbsp;&nbsp;&nbsp;<ion-icon name="ios-arrow-forward-outline"></ion-icon>
+                ENTER DATA&nbsp;&nbsp;&nbsp;<ion-icon name="md-create"></ion-icon>
               </button>
             </ion-item-group>
           </ion-col>
