--- a/src/pages/event-capture-home/event-capture-home.html
+++ b/src/pages/event-capture-home/event-capture-home.html
@@ -19,51 +19,58 @@
     <ion-grid>
       <ion-row>
         <ion-col>
-          <button [disabled]="!currentSelectionStatus.orgUnit" class="dataEntryButton" text-capitalize ion-button full large (tap)="openOrganisationUnitModal()" color="whitecolor">
-            <span *ngIf="currentSelectionStatus.isOrgUnitLoaded" >
+          <ion-item text-capitalize (tap)="openOrganisationUnitModal()">
+            <div style="text-align: center" item-left>
+              <div *ngIf="!currentSelectionStatus.isOrgUnitLoaded">
+                <page-loading loadingSize="small"></page-loading>
+              </div>
+            </div>
+            <div *ngIf="currentSelectionStatus.isOrgUnitLoaded" style="text-align: center">
               {{ selectedOrganisationUnitLabel }}
-            </span>
+            </div>
             <span *ngIf="!currentSelectionStatus.isOrgUnitLoaded" >
-              <page-loading loadingSize="small"></page-loading>
               Loading organisation units
             </span>
-          </button>
+          </ion-item>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col>
-          <button [disabled]="!currentSelectionStatus.program" class="dataEntryButton" text-capitalize ion-button full large (tap)="openProgramsModal()" color="whitecolor">
+
+          <ion-item text-capitalize (tap)="openProgramsModal()">
+            <div style="text-align: center" item-left>
+              <div *ngIf="!currentSelectionStatus.isProgramLoaded">
+                <page-loading loadingSize="small"></page-loading>
+              </div>
+            </div>
+            <div *ngIf="currentSelectionStatus.isProgramLoaded" style="text-align: center">
+              {{ selectedProgramLabel }}
+            </div>
             <span *ngIf="!currentSelectionStatus.isProgramLoaded" >
-              <page-loading loadingSize="small"></page-loading>
               Loading programs
             </span>
-            <span *ngIf="currentSelectionStatus.isProgramLoaded" >
-              {{ selectedProgramLabel }}
-            </span>
-
-          </button>
+          </ion-item>
         </ion-col>
       </ion-row>
       <!-- program data dimensions -->
       <div *ngIf="selectedProgram">
         <div *ngIf="selectedProgram.categoryCombo">
           <div *ngIf="selectedProgram.categoryCombo.categories[0].name !='default'">
-            <div *ngFor="let category of selectedProgram.categoryCombo.categories;let categoryIndex = index ">
-              <ion-row >
-                <ion-col >
-                  <ion-list>
-                    <ion-item >
-                      <ion-label>{{ category.name }}</ion-label>
-                      <ion-select [(ngModel)]="selectedDataDimension[categoryIndex]" (ionChange)="checkingForDataDimension()" interface="action-sheet">
-                        <ion-option *ngFor="let option of category.categoryOptions" value="{{option.id}}" >
-                          {{ option.name }}
-                        </ion-option>
-                      </ion-select>
-                    </ion-item>
-                  </ion-list>
-                </ion-col>
-              </ion-row>
-            </div>
+            <ion-row >
+              <ion-col >
+                <div *ngFor="let category of selectedProgram.categoryCombo.categories;let categoryIndex = index ">
+                  <ion-item >
+                    <ion-label>{{ category.name }}</ion-label>
+                    <ion-select [(ngModel)]="selectedDataDimension[categoryIndex]" (ionChange)="checkingForDataDimension()" interface="action-sheet">
+                      <ion-option *ngFor="let option of category.categoryOptions" value="{{option.id}}" >
+                        {{ option.name }}
+                      </ion-option>
+                    </ion-select>
+                  </ion-item>
+                  <br>
+                </div>
+              </ion-col>
+            </ion-row>
           </div>
         </div>
       </div>
