--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,8 @@
   <script type="text/javascript" src="assets/library/dhis2/jQuery/calendars/jquery.calendars.thai.min.js"></script>
 
   <script src="assets/library/reportModule.js"></script>
+  <script src="assets/library/angularjs/angular.min.js"></script>
+  <script src="assets/library/angularjs/angular-route.min.js"></script>
   <script src="assets/library/dhis2/dhis2.util.js"></script>
   <script src="assets/library/dhis2/dhis2.period.js"></script>
   <script>
