--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -26,6 +26,11 @@
   </div>
 
   <div *ngIf="!loadingData" >
+
+    <ion-refresher (ionRefresh)="reLoadContents($event)">
+      <ion-refresher-content ></ion-refresher-content>
+    </ion-refresher>
+
     <ion-grid>
       <ion-row>
         <ion-col >
