--- a/src/pages/update-manager-home/update-manager-home.html
+++ b/src/pages/update-manager-home/update-manager-home.html
@@ -46,33 +46,39 @@
             <ion-icon [color]="(updateManagerObject.updateMetadata.isExpanded) ?'current' : 'font-color'" *ngIf="updateManagerObject.updateMetadata.isExpanded" name="ios-arrow-up" item-right></ion-icon>
           </ion-item>
           <div class="updateManagerContents" *ngIf="updateManagerObject.updateMetadata.isExpanded" >
-            <ion-row>
-              <ion-col width="50">
-                <button [disabled]="!updateManagerObject.updateMetadata.isSaved" ion-button large full text-capitalize class="normalButton" (tap)="checkingForResourceUpdate()">Update</button>
-              </ion-col>
-              <ion-col width="50">
-                <button [disabled]="!updateManagerObject.updateMetadata.isSaved" ion-button large full text-capitalize class="normalButton" (tap)="autoSelect('selectAll')" *ngIf="!hasAllSelected"> Select All</button>
-                <button [disabled]="!updateManagerObject.updateMetadata.isSaved" ion-button large full text-capitalize class="normalButton" (tap)="autoSelect('unSelectAll')" *ngIf="hasAllSelected">Un-select all</button>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col >
-                <ion-list>
-                  <div *ngFor="let resourceObject of resources">
-                    <ion-item>
-                      <ion-label>{{ resourceObject.displayName }}</ion-label>
-                      <ion-checkbox [(ngModel)]="resourceObject.status" color="favorite"></ion-checkbox>
-                    </ion-item>
-                  </div>
-                </ion-list>
-              </ion-col>
-            </ion-row>
 
-            <ion-row>
-              <ion-col >
-                <button ion-button large full text-capitalize class="normalButton" (tap)="checkingForResourceUpdate()">Update</button>
-              </ion-col>
-            </ion-row>
+            <div *ngIf="updateManagerObject.updateMetadata.isProcessRunning">
+              <page-loading loadingSize="large" [loadingMessage] = "updateMetadataLoadingMessages"></page-loading>
+            </div>
+            <div *ngIf="!updateManagerObject.updateMetadata.isProcessRunning">
+              <ion-row>
+                <ion-col width="50">
+                  <button [disabled]="!updateManagerObject.updateMetadata.isSaved" ion-button large full text-capitalize class="normalButton" (tap)="checkingForResourceUpdate()">Update</button>
+                </ion-col>
+                <ion-col width="50">
+                  <button [disabled]="!updateManagerObject.updateMetadata.isSaved" ion-button large full text-capitalize class="normalButton" (tap)="autoSelect('selectAll')" *ngIf="!hasAllSelected"> Select All</button>
+                  <button [disabled]="!updateManagerObject.updateMetadata.isSaved" ion-button large full text-capitalize class="normalButton" (tap)="autoSelect('unSelectAll')" *ngIf="hasAllSelected">Un-select all</button>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col >
+                  <ion-list>
+                    <div *ngFor="let resourceObject of resources">
+                      <ion-item>
+                        <ion-label>{{ resourceObject.displayName }}</ion-label>
+                        <ion-checkbox [(ngModel)]="resourceObject.status" color="favorite"></ion-checkbox>
+                      </ion-item>
+                    </div>
+                  </ion-list>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col >
+                  <button ion-button large full text-capitalize class="normalButton" (tap)="checkingForResourceUpdate()">Update</button>
+                </ion-col>
+              </ion-row>
+            </div>
+
           </div>
         </ion-col>
       </ion-row>
