--- a/src/pages/data-set-sync-container/data-set-sync-container.html
+++ b/src/pages/data-set-sync-container/data-set-sync-container.html
@@ -18,7 +18,7 @@
     <page-loading [loadingSize]="large" [loadingMessage] = "loadingMessages"></page-loading>
   </div>
   <div *ngIf="!loading && hasDataPrepared">
-    <page-data-set-sync [dataSetsSyncObjects]="dataSetsSyncObjects" [dataSetIds]="dataSetIds" [hasDataPrepared]="hasDataPrepared" ></page-data-set-sync>
+    <page-data-set-sync [dataSetsSyncObjects]="dataSetsSyncObjects" [syncStatus]="syncStatus" [dataSetIds]="dataSetIds" [hasDataPrepared]="hasDataPrepared" ></page-data-set-sync>
   </div>
 
 </ion-content>
