--- a/src/pages/data-set-sync-container/data-set-sync-container.html
+++ b/src/pages/data-set-sync-container/data-set-sync-container.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="primary" mode="md">
-    <ion-title>Entry forms sync status</ion-title>
+    <ion-title>{{ headerLabel }}</ion-title>
   </ion-navbar>
 
 </ion-header>
