--- a/src/pages/data-element-sync/data-element-sync.html
+++ b/src/pages/data-element-sync/data-element-sync.html
@@ -1,2 +1,13 @@
-
-DataElementSyncPage
+<ion-grid>
+  <ion-row>
+    <ion-col >
+      <div *ngFor="let dataElement of dataElements" >
+        <div class="contents">
+          <p ><b>Form Label : </b>{{ dataElement.name }}<br>
+          <b>Period : </b>{{ dataElement.period}}<br>
+          <b>value : </b>{{ dataElement.value }}</p>
+        </div>
+      </div>
+    </ion-col>
+  </ion-row>
+</ion-grid>
