fixing loading issues on analyze synchronization status based on a given form as well as sorting data values based on period

--- a/src/pages/data-element-sync-container/data-element-sync-container.html
+++ b/src/pages/data-element-sync-container/data-element-sync-container.html
@@ -14,11 +14,11 @@
 
 
 <ion-content class="data-element-sync-container">
-  <div *ngIf="loading">
-    <page-loading [loadingSize]="large" [loadingMessage] = "loadingMessages"></page-loading>
+  <div *ngIf="isLoading">
+    <page-loading loadingSize="large" [loadingMessage] = "loadingMessages"></page-loading>
   </div>
-  <div *ngIf="!loading">
-    <page-data-element-sync [dataElements]="dataElements"></page-data-element-sync>
+  <div *ngIf="!isLoading">
+    <page-data-element-sync [dataElements]="dataElements" ></page-data-element-sync>
   </div>
 
 
