--- a/src/pages/organisation-units/organisation-units.html
+++ b/src/pages/organisation-units/organisation-units.html
@@ -13,95 +13,18 @@
 </ion-header>
 
 <ion-content class = "organisation-units">
+
   <ion-grid>
-    <div *ngIf="loadingData">
-      <ion-list>
-        <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
-          {{ message }}
-          <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right color="favorite"></ion-icon>
-          <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
-            <page-loading loadingSize="small"></page-loading>
-          </div>
-        </ion-item>
-      </ion-list>
-    </div>
-
-    <div *ngIf="!loadingData" >
-      <div *ngFor="let orgUnit of organisationUnitsList">
-        <ion-item>
-          <ion-icon name="ios-add-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-          <ion-icon name="ios-remove-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-          <!--<ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>-->
-          <span ion-text (tap)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'font-color'"  >{{ orgUnit.name }}</span>
-        </ion-item>
-        <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
-
-          <div *ngFor="let orgUnit of orgUnit.children">
-            <ion-item>
-              <ion-icon name="ios-add-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-              <ion-icon name="ios-remove-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-              <!--<ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>-->
-              <span ion-text (tap)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'font-color'" >{{ orgUnit.name }}</span>
-            </ion-item>
-            <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
-
-              <div *ngFor="let orgUnit of orgUnit.children">
-                <ion-item>
-                  <ion-icon name="ios-add-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                  <ion-icon name="ios-remove-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                  <!--<ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>-->
-                  <span ion-text (tap)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'font-color'"  >{{ orgUnit.name }}</span>
-                </ion-item>
-                <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
-
-                  <div *ngFor="let orgUnit of orgUnit.children">
-                    <ion-item>
-                      <ion-icon name="ios-add-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                      <ion-icon name="ios-remove-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                      <!--<ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>-->
-                      <span ion-text (tap)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'font-color'" >{{ orgUnit.name }}</span>
-                    </ion-item>
-                    <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
-
-                      <div *ngFor="let orgUnit of orgUnit.children">
-                        <ion-item>
-                          <ion-icon name="ios-add-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                          <ion-icon name="ios-remove-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                          <!--<ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>-->
-                          <span ion-text (tap)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'font-color'" >{{ orgUnit.name }}</span>
-                        </ion-item>
-                        <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
-
-                          <div *ngFor="let orgUnit of orgUnit.children">
-                            <ion-item>
-                              <ion-icon name="ios-add-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && !hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                              <ion-icon name="ios-remove-circle-outline" (tap)="toggleOrgUnit(orgUnit)" *ngIf="orgUnit.children.length>0 && hasOrgUnitChildrenOpened[orgUnit.id]" item-left></ion-icon>
-                              <!--<ion-icon name="ios-folder-outline" *ngIf="orgUnit.children.length==0" item-left></ion-icon>-->
-                              <span ion-text (tap)="setSelectedOrgUnit(orgUnit)" [color]="(currentSelectedOrgUnitName == orgUnit.name) ?'current' : 'font-color'" >{{ orgUnit.name }}</span>
-                            </ion-item>
-                            <div *ngIf="hasOrgUnitChildrenOpened[orgUnit.id]" style="padding-left: 10px">
-
-                            </div>
-                          </div>
-
-                        </div>
-
-                      </div>
-
-                    </div>
-
-                  </div>
-
-                </div>
-              </div>
-
-            </div>
-
-          </div>
-
+    <ion-row>
+      <ion-col >
+        <div *ngFor="let organisationUnit of organisationUnits">
+          <page-organisation-units-tree [organisationUnit]="organisationUnit"
+                                        [hasOrgUnitChildrenLoaded]="hasOrgUnitChildrenLoaded"
+                                        [hasOrgUnitChildrenOpened]="hasOrgUnitChildrenOpened"
+                                        [currentUser]="currentUser"></page-organisation-units-tree>
         </div>
-      </div>
-    </div>
+      </ion-col>
+    </ion-row>
   </ion-grid>
 
 </ion-content>
