fixing selection of organisation unit on restructed organsation

--- a/src/pages/organisation-units/organisation-units.html
+++ b/src/pages/organisation-units/organisation-units.html
@@ -21,6 +21,7 @@
           <page-organisation-units-tree [organisationUnit]="organisationUnit"
                                         [hasOrgUnitChildrenLoaded]="hasOrgUnitChildrenLoaded"
                                         [hasOrgUnitChildrenOpened]="hasOrgUnitChildrenOpened"
+                                        (selectedOrganisationUnit)="setSelectedOrganisationUnit($event)"
                                         [currentUser]="currentUser"></page-organisation-units-tree>
         </div>
       </ion-col>
