--- a/src/pages/organisation-units-tree/organisation-units-tree.html
+++ b/src/pages/organisation-units-tree/organisation-units-tree.html
@@ -31,6 +31,7 @@
       <page-organisation-units-tree [organisationUnit]="organisationUnit"
                                     [hasOrgUnitChildrenLoaded]="hasOrgUnitChildrenLoaded"
                                     [hasOrgUnitChildrenOpened]="hasOrgUnitChildrenOpened"
+                                    (selectedOrganisationUnit)="setSelectedOrganisationUnit($event)"
                                     [currentUser]="currentUser"></page-organisation-units-tree>
     </div>
   </div>
