--- a/src/pages/data-element-sync/data-element-sync.html
+++ b/src/pages/data-element-sync/data-element-sync.html
@@ -10,7 +10,8 @@
           <div class="contents">
             <p ><b>Form Label : </b>{{ dataElement.name }}<br>
               <b>Period : </b>{{ dataElement.period}}<br>
-              <b>value : </b>{{ dataElement.value }}</p>
+              <b>value : </b>{{ dataElement.value }}<br>
+              <b>Organisation Unit : </b>{{ dataElement.orgUnit}}</p>
           </div>
         </div>
       </ion-col>
