--- a/src/pages/organisation-units/organisation-units.html
+++ b/src/pages/organisation-units/organisation-units.html
@@ -14,6 +14,9 @@
 
 <ion-content class = "organisation-units">
 
+  {{ lastSelectedOrgUnit.name }}<br>
+  ancestors :: {{ lastSelectedOrgUnit.ancestors|json }}
+
   <ion-grid>
     <ion-row>
       <ion-col >
