update app slogan

--- a/src/pages/launcher/launcher.html
+++ b/src/pages/launcher/launcher.html
@@ -12,7 +12,7 @@
         <div class="logo">
           <img [src]="logoUrl" >
         </div>
-        <p >Routine and survey data on your pocket</p>
+        <p >Innovation in every dimension</p>
       </ion-col>
     </ion-row>
   </ion-grid>
